%% GENERATED by service-conventions/regen-er (mermerd 0.13.0) from src/main/resources/db/migration/
%% Do not edit by hand — CI fails on drift. Regenerate: sh service-conventions/regen-er
erDiagram
    api_key {
        text actor_name 
        text actor_type 
        timestamp_with_time_zone created_at 
        uuid id PK 
        text key_hash UK 
        text label 
        timestamp_with_time_zone revoked_at 
        uuid tenant_id FK 
    }

    guest {
        timestamp_with_time_zone created_at 
        uuid id PK 
        jsonb profile 
        uuid tenant_id FK 
        timestamp_with_time_zone updated_at 
    }

    identifier {
        uuid guest_id FK,UK 
        uuid id PK 
        uuid tenant_id UK 
        text type UK 
        text value_normalized UK 
    }

    identifier_quality_rule {
        timestamp_with_time_zone created_at 
        uuid id PK 
        text identifier_type UK 
        text match_kind UK 
        text note 
        text rule 
        uuid tenant_id FK,UK 
        text value_normalized UK 
    }

    match_review {
        uuid candidate_guest_id 
        numeric confidence 
        timestamp_with_time_zone created_at 
        timestamp_with_time_zone decided_at 
        uuid decision_event_id FK 
        uuid id PK 
        text identifier_type 
        text identifier_value 
        text matcher_name 
        text reason 
        uuid source_record_id FK 
        text status 
        uuid tenant_id FK 
    }

    merge_event {
        jsonb absorbed_guest_ids 
        text actor_id 
        text actor_type 
        numeric confidence 
        timestamp_with_time_zone created_at 
        jsonb evidence 
        jsonb excluded_guest_ids 
        uuid guest_id 
        uuid id PK 
        text kind 
        text matcher_name 
        jsonb source_record_ids 
        uuid tenant_id FK 
    }

    negative_match_rule {
        text actor_id 
        text actor_type 
        timestamp_with_time_zone created_at 
        uuid id PK 
        text lifted_actor_id 
        text lifted_actor_type 
        timestamp_with_time_zone lifted_at 
        text origin 
        uuid record_a FK 
        uuid record_b FK 
        uuid tenant_id 
    }

    record_block_key {
        uuid id PK 
        uuid source_record_id FK,UK 
        uuid tenant_id 
        text type UK 
        text value_normalized UK 
    }

    record_identifier {
        uuid id PK 
        uuid source_record_id FK,UK 
        uuid tenant_id 
        text type UK 
        text value_normalized UK 
    }

    record_object {
        timestamp_with_time_zone business_end 
        timestamp_with_time_zone business_start 
        timestamp_with_time_zone created_at 
        uuid id PK 
        text object_id 
        integer object_position 
        text object_role 
        text object_type 
        timestamp_with_time_zone object_version 
        uuid source_record_id FK,UK 
        uuid source_system_id FK 
        uuid tenant_id 
    }

    resolution_link {
        timestamp_with_time_zone created_at 
        uuid created_by_event_id FK 
        uuid guest_id FK 
        uuid id PK 
        uuid source_record_id FK,UK 
        uuid tenant_id 
    }

    source_record {
        text external_key UK 
        jsonb extracted 
        uuid id PK 
        boolean needs_review 
        jsonb needs_review_reasons 
        jsonb payload 
        timestamp_with_time_zone received_at 
        timestamp_with_time_zone record_timestamp 
        uuid source_system_id FK,UK 
        uuid tenant_id FK,UK 
    }

    source_system {
        text code UK 
        timestamp_with_time_zone created_at 
        uuid id PK 
        text name 
        uuid tenant_id FK,UK 
    }

    tenant {
        numeric auto_merge_threshold 
        timestamp_with_time_zone created_at 
        uuid id PK 
        text name 
        numeric review_floor 
        integer review_threshold 
        text slug UK 
    }

    api_key }o--|| tenant : "tenant_id"
    guest }o--|| tenant : "tenant_id"
    identifier }o--|| guest : "guest_id"
    resolution_link }o--|| guest : "guest_id"
    identifier_quality_rule }o--|| tenant : "tenant_id"
    match_review }o--|| merge_event : "decision_event_id"
    match_review }o--|| source_record : "source_record_id"
    match_review }o--|| tenant : "tenant_id"
    merge_event }o--|| tenant : "tenant_id"
    resolution_link }o--|| merge_event : "created_by_event_id"
    negative_match_rule }o--|| source_record : "record_a"
    negative_match_rule }o--|| source_record : "record_b"
    record_block_key }o--|| source_record : "source_record_id"
    record_identifier }o--|| source_record : "source_record_id"
    record_object }o--|| source_record : "source_record_id"
    record_object }o--|| source_system : "source_system_id"
    resolution_link }o--|| source_record : "source_record_id"
    source_record }o--|| source_system : "source_system_id"
    source_record }o--|| tenant : "tenant_id"
    source_system }o--|| tenant : "tenant_id"
